--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,15 @@
 :root {
     --main-font: "Poppins",
         sans-serif;
+    --additional-font: "Merriweather",
+        serif;
+    --main-color: #2a6d58;
+    --hover-color: #1d4e3f;
+    --background-color: #4475429c;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
@@ -33,22 +42,25 @@ nav a {
 }
 
 nav a:hover {
-    color: #2a6d58;
+    color: var(--main-color);
     text-decoration: underline;
 }
 
 .main-content {
     padding: 45px 45px 45px 45px;
-    background-color: #4475429c;
-    margin: 0px 15px 150px;
+    background-color: var(--background-color);
+    margin: 0px 15px 200px;
     border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
 }
 
 .main-content h1 {
     text-align: center;
     font-size: 56px;
     font-weight: 300;
-    font-family: "Merriweather", serif;
+    font-family: var(--additional-font);
+    line-height: 1.3;
 }
 
 .main-content img {
@@ -59,7 +71,7 @@ nav a:hover {
     margin-top: 50px;
     display: inline-block;
     font-weight: 400;
-    font-family: "Merriweather", serif;
+    font-family: var(--additional-font);
     font-style: italic;
 }
 
@@ -71,6 +83,8 @@ nav a:hover {
     background-repeat: no-repeat;
     border-radius: 15px;
     margin: 0px 90px 30px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
 }
 
 .about h2 {
@@ -87,7 +101,7 @@ nav a:hover {
 }
 
 .name-bold {
-    font-weight: 600;
+    font-weight: 700;
     font-style: italic;
 }
 
@@ -99,7 +113,7 @@ nav a:hover {
 }
 
 .foundation-link:hover {
-    color: #2a6d58;
+    color: var(--main-color);
     text-decoration: underline;
 }
 
@@ -111,7 +125,7 @@ nav a:hover {
 .donate-btn {
     display: inline-block;
     text-decoration: none;
-    background-color: #2a6d58;
+    background-color: var(--main-color);
     color: white;
     font-weight: 400;
     font-size: 19px;
@@ -125,19 +139,20 @@ nav a:hover {
 }
 
 .donate-btn:hover {
-    background-color: #1d4e3f;
+    background-color: var(--hover-color);
 }
 
 footer .email-link {
     text-decoration: none;
     color: black;
     font-size: 22px;
-    margin: 100px 0 0;
+    margin: 150px 0 0;
     transition: all 100ms ease-in-out;
+    font-weight: 500;
 }
 
 footer .email-link:hover {
-    color: #2a6d58;
+    color: var(--main-color);
     text-decoration: underline;
 }
 
@@ -149,7 +164,7 @@ footer .social-link a {
 }
 
 footer .social-link a:hover {
-    color: #1d4e3f;
+    color: var(--hover-color);
 }
 
 @media (max-width: 600px) {
