--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@ html {
 
 body {
     font-family: var(--main-font);
-    background-image: url('/images/background.png');
+    background-image: url('https://s3.amazonaws.com/shecodesio-production/uploads/files/000/133/353/original/background.png?1720964414');
     color: black;
 }
 
@@ -77,7 +77,7 @@ nav a:hover {
 
 .about {
     padding: 35px 45px 35px 45px;
-    background-image: url('/images/opacity-flow.png');
+    background-image: url('https://s3.amazonaws.com/shecodesio-production/uploads/files/000/133/357/original/opacity-flow.png?1720964936');
     background-color: #F5F5F5;
     background-size: 90%;
     border-radius: 15px;
